// Code generated by protoc-gen-orm-service. DO NOT EDIT.
// source: apptest/user.proto.proto

edition = "2023";

package apptest;

import "apptest/tenant.proto_svc.g.proto";
import "apptest/user.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/protobuf-orm/protoc-gen-orm-service/internal/apptest";

service UserService {
	rpc Add(UserAddRequest) returns (User);
	rpc Get(UserGetRequest) returns (User);
	rpc Patch(UserPatchRequest) returns (User);
	rpc Erase(UserRef) returns (google.protobuf.Empty);
}

message UserAddRequest {
	bytes id = 1;
	TenantRef tenant = 2;
	string alias = 4 [
		features.field_presence = IMPLICIT
	];
	string name = 5 [
		features.field_presence = IMPLICIT
	];
	map<string,string> labels = 7;
	google.protobuf.Timestamp date_created = 15;
}

message UserRefByAlias {
	string alias = 4;
	TenantRef tenant = 2;
}

message UserRef {
	oneof key {
		bytes id = 1;
		UserRefByAlias alias = 4;
	}
}

message UserSelect {
	bool all = 1;
	TenantSelect tenant = 2;
	bool alias = 4;
	bool name = 5;
	bool labels = 7;
	bool date_created = 15;
}

message UserGetRequest {
	UserRef ref = 1;
	UserSelect select = 2;
}

message UserPatchRequest {
	UserRef target = 1;
	TenantRef tenant = 3;
	string alias = 7;
	string name = 9;
	map<string,string> labels = 13;
}
